Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7897

global functions don't produce useful warnings

    XMLWordPrintable

Details

    Description

      Qt.rgba(100,0,0) returns null, resulting in a "Unable to assign null to QColor". A warning about invalid parameters might be more useful/appropriate.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            wallison Warwick Allison (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes