Throw exceptions on programming errors for global functions.

Task-number: QTBUG-7897